# joelsvensson.github.io

./: .gitignore  README.md  hugo.yaml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml  linting.yml
content/: CNAME
content/about/: joel.md  mgio.md
content/blogposts/2025/: 01_first_post.md  02_uppdrag.md
content/blogs/2025/: 01_first_post.md  02_uppdrag.md
content/css/: override.css
content/pages/: joel.md  mgio.md
static/: style.css
